@@ -4,6 +4,8 @@
     - add encryption support
     - add reconnect support
     - add forking support
+    - retry failed publish once to reconnect e.g. on broken connection due
+      to server restart
     - remove class-wide connection caching
 
 0.141470  2014-05-27 08:39:29EDT-0400 America/New_York
